--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         text-decoration:none;
         color:#FFF
       }
+      #cursor {
+        z-index:42069;
+      }
     </style>
   </head>
   
