--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <a href="https://github.com/darvell/Compiling-Music">Coding Music</a>
       </h1>
       <p>A Visual Studio 2010 addon based on BASS.DLL that provides the ability
-        to play custom music during compilation, on copile failure and compile
-        error.</p>
+        to play custom music during compilation, on compile failure and compile
+        success.</p>
       </p>
       <hr>
       <h1>
